--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ h3 {
 }
 
 .club-bg {
-  background: url("/assets/image/club-bg.jpg") top/cover no-repeat;
+  background: url("assets/image/club-bg.jpg") top/cover no-repeat;
   width: 100%;
   height: 1655px;
 }
@@ -493,7 +493,7 @@ h3 {
 }
 
 .appendArrows .slick-prev {
-  background: url("/assets/image/left.png");
+  background: url("assets/image/left.png");
   font-size: 0px;
   width: 40px;
   height: 40px;
@@ -506,7 +506,7 @@ h3 {
 }
 
 .appendArrows .slick-next {
-  background: url("/assets/image/right.png");
+  background: url("assets/image/right.png");
   font-size: 0px;
   width: 40px;
   height: 40px;
@@ -565,7 +565,7 @@ h3 {
 }
 
 .lupa-o {
-  background: url("/assets/image/dandruff.svg");
+  background: url("assets/image/dandruff.svg");
   background-repeat: no-repeat;
   height: 51px;
   background-size: 50px;
@@ -648,7 +648,7 @@ h3 {
 }
 
 .clients-arrow .slick-next {
-  background: url("/assets/image/right.png");
+  background: url("assets/image/right.png");
   font-size: 0px;
   width: 40px;
   height: 40px;
@@ -665,7 +665,7 @@ h3 {
 }
 
 .clients-arrow .slick-prev {
-  background: url("/assets/image/left.png");
+  background: url("assets/image/left.png");
   font-size: 0px;
   width: 40px;
   height: 40px;
@@ -736,7 +736,7 @@ h3 {
 }
 
 .form-bg {
-  background: url("/assets/image/bg-popup.png");
+  background: url("assets/image/bg-popup.png");
   width: 100%;
   height: 800px;
   position: relative;
@@ -1017,7 +1017,7 @@ h3 {
 }
 
 .horse-arrow .slick-next {
-  background: url("/assets/image/right.png");
+  background: url("assets/image/right.png");
   font-size: 0px;
   width: 40px;
   height: 40px;
@@ -1034,7 +1034,7 @@ h3 {
 }
 
 .horse-arrow .slick-prev {
-  background: url("/assets/image/left.png");
+  background: url("assets/image/left.png");
   font-size: 0px;
   width: 40px;
   height: 40px;
